--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -14,7 +14,7 @@
       <h1 class="project-name">{{ page.title | default: site.title }}</h1>
       <h2 class="project-tagline">{{ page.description | default: site.description }}</h2>
     </header>
-
+    {% include sidebar.html %}
     <main id="content" class="main-content" role="main">
       {{ content }}
     </main>
