--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,7 +17,7 @@
     <h1 class="project-name">{{ page.title | default: site.title }}</h1>
     <h2 class="project-tagline">{{ page.description | default: site.description }}</h2>
   </header>
-  <div class="layout">
+  <div class="wrapper layout">
     {% include sidebar.html %}
     <main id="content" class="main-content" role="main">
       {{ content }}
