--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -35,6 +35,13 @@
       color: #157878;
     }
   }
+
+  .disabled {
+    color: #999;
+    cursor: not-allowed;
+    text-decoration: none;
+    opacity: 0.6;
+  }
 }
 
 @media screen and (max-width: 42em) {
