add chapter 2 and author

--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -2,9 +2,9 @@
   <ul>
     <li><a href="{{ '/' | relative_url }}">🏠 Home</a></li>
     <li><a href="{{ '/docs/01-spring-boot-quickstart' | relative_url }}">🏁 Quickstart</a></li>
-    <li><span class="disabled" data-path="/docs/02-rest-api">🌐 REST API</span></li>
-    <li><span class="disabled" data-path="/docs/03-jpa-db">🛢️ JPA + DB</span></li>
-    <li><span class="disabled" data-path="/docs/04-architecture">🧠 Architecture</span></li>
+    <li><a href="{{ '/docs/02-rest-api' | relative_url }}">🌐 REST API</a></li>
+    <li><a href="{{ '/docs/03-service-layer' | relative_url }}">🧠 Architecture</a></li>
+    <li><span class="disabled" data-path="/docs/04-jpa-db">🛢️ JPA + DB</span></li>
     <li><span class="disabled" data-path="/docs/05-security">🔐 Security</span></li>
     <li><span class="disabled" data-path="/docs/06-validation">📊 Validation</span></li>
     <li><span class="disabled" data-path="/docs/07-testing">🧪 Testing</span></li>
