--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,6 +16,12 @@
   <header class="page-header" role="banner">
     <h1 class="project-name">{{ page.title | default: site.title }}</h1>
     <h2 class="project-tagline">{{ page.description | default: site.description }}</h2>
+    
+    <!-- Add links -->
+    <div class="header-links">
+      <a href="https://github.com/minweny/spring-zero-to-hero" class="btn">📚 GitHub</a>
+      <a href="https://linkedin.com/in/minwenyu/" class="btn">👤 Author</a>
+    </div>
   </header>
   <div class="wrapper layout">
     {% include sidebar.html %}
