--- a/_includes/sidebar.html
+++ b/_includes/sidebar.html
@@ -5,7 +5,7 @@
     <li><a href="{{ '/docs/02-rest-api' | relative_url }}">🌐 REST API</a></li>
     <li><a href="{{ '/docs/03-service-layer' | relative_url }}">🧠 Architecture</a></li>
     <li><a href="{{ '/docs/04-validation-error-handling' | relative_url }}">📊 Validation & Errors</a></li>
-    <li><span class="disabled" data-path="/docs/05-jpa-db">🛢️ JPA + DB</span></li>
+    <li><a href="{{ '/docs/05-jpa-db' | relative_url }}">🛢️ JPA + DB</a></li>
     <li><span class="disabled" data-path="/docs/06-testing">🧪 Testing</span></li>
     <li><span class="disabled" data-path="/docs/07-security">🔐 Security</span></li>
     <li><span class="disabled" data-path="/docs/08-api-docs">📚 API Docs</span></li>
