--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,10 @@
       <a href="https://github.com/minweny/spring-zero-to-hero" class="btn">📚 GitHub</a>
       <a href="https://linkedin.com/in/minwenyu/" class="btn">👤 Author</a>
     </div>
+    <!-- Visitor Counter -->
+    <div style="text-align: center; margin-top: 10px;">
+      <img alt="Visitors" src="https://hits.sh/minweny/spring-zero-to-hero.svg?style=flat-square&label=visitors&color=blue&count=unique" />
+    </div>
   </header>
   <div class="wrapper layout">
     {% include sidebar.html %}
