--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -24,7 +24,8 @@
     </div>
     <!-- Visitor Counter -->
     <div style="text-align: center; margin-top: 10px;">
-      <img alt="Visitors" src="https://hits.sh/minweny/spring-zero-to-hero.svg?style=flat-square&label=visitors&color=blue&count=unique" />
+      <img alt="👁 Visitors"
+      src="https://hits.sh/minweny.spring-zero-to-hero.svg?label=👁%20visitors&color=green&style=for-the-badge" />
     </div>
   </header>
   <div class="wrapper layout">
